--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
       height: 40px;
       margin-right: 15px;
     }
+    @media (max-width:600px) {
+      header img {
+        position: static;
+        display: block;
+        margin:0 auto 10px auto;
+      }
+      header h1 {
+        front-size: 1.5em;
+        text-align:center;
+      }
+    }
   </style>
 </head>
 <body>
@@ -164,18 +175,18 @@
       <tr><th>Pos</th><th>Equipo</th><th>Nombre</th><th>Pts</th><th>GF</th><th>GC</th><th>DG</th><th>TR</th></tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Nico</td><td>10</td><td>8</td><td>1</td><td>+7</td><td>1</td></tr>
-      <tr><td>2</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Mari</td><td>9.25</td><td>6</td><td>1</td><td>+5</td><td>1</td></tr>
-      <tr><td>3</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Alar</td><td>7.5</td><td>8</td><td>6</td><td>+2</td><td>1</td></tr>
-      <tr><td>4</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tincho</td><td>7.5</td><td>4</td><td>4</td><td>+0</td><td>1</td></tr>
-      <tr><td>5</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Yo</td><td>7.25</td><td>2</td><td>2</td><td>+0</td><td>1</td></tr>
-      <tr><td>6</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Agus</td><td>6.25</td><td>7</td><td>4</td><td>+3</td><td>1</td></tr>
-      <tr><td>7</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Nothampton</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Pato</td><td>6.25</td><td>3</td><td>1</td><td>+2</td><td>1</td></tr>
-      <tr><td>8</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Manu</td><td>4.5</td><td>7</td><td>8</td><td>-1</td><td>1</td></tr>
-      <tr><td>9</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Fede</td><td>3.25</td><td>3</td><td>5</td><td>-2</td><td>1</td></tr>
+      <tr><td>1</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Nico</td><td>10</td><td>8</td><td>1</td><td>+7</td><td>0</td></tr>
+      <tr><td>2</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Mari</td><td>9.25</td><td>6</td><td>1</td><td>+5</td><td>0</td></tr>
+      <tr><td>3</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Alar</td><td>7.5</td><td>8</td><td>6</td><td>+2</td><td>6</td></tr>
+      <tr><td>4</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tincho</td><td>7.5</td><td>4</td><td>4</td><td>+0</td><td>2</td></tr>
+      <tr><td>5</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Yo</td><td>7.25</td><td>2</td><td>2</td><td>+0</td><td>4</td></tr>
+      <tr><td>6</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Agus</td><td>6.25</td><td>6</td><td>4</td><td>+2</td><td>1</td></tr>
+      <tr><td>7</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Nothampton</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Pato</td><td>6.25</td><td>3</td><td>1</td><td>+2</td><td>0</td></tr>
+      <tr><td>8</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Manu</td><td>4.5</td><td>7</td><td>7</td><td>+0</td><td>2</td></tr>
+      <tr><td>9</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Fede</td><td>3.25</td><td>3</td><td>5</td><td>-2</td><td>0</td></tr>
       <tr><td>10</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Rama</td><td>1.25</td><td>1</td><td>7</td><td>-6</td><td>1</td></tr>
-      <tr><td>11</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Joaco</td><td>0</td><td>0</td><td>6</td><td>-6</td><td>1</td></tr>
-      <tr><td>12</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Charly</td><td>-0.5</td><td>2</td><td>6</td><td>-4</td><td>1</td></tr>
+      <tr><td>11</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Joaco</td><td>0</td><td>0</td><td>6</td><td>-6</td><td>2</td></tr>
+      <tr><td>12</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Charly</td><td>-0.5</td><td>2</td><td>6</td><td>-4</td><td>0</td></tr>
     </tbody>
   </table>
 
@@ -196,12 +207,12 @@
   <table>
     <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Living</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
   </tbody>
   </table>
 
@@ -209,12 +220,12 @@
   <table>
     <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Living</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Livinge</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
   </tbody>
   </table>
 
@@ -222,12 +233,12 @@
   <table>
     <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Living</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>Livinge</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
   </tbody>
   </table>
 </div>
