--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@
   </div>
 </div>
 
+  <div style="text-align: center; margin-top: 30px;">
+    <img source="IMG_5721.jpeg" style= "max-width: 90%; border-radius:12px; box-shadow: 0 0 15px rgba (0,0,0,0.4);">
+    </div>
+  
 <script>
 function showTab(tab) {
   document.querySelectorAll('.tab-content').forEach(el => el.classList.remove('active'));
