--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <h3>2da Ronda</h3>
       <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>2 - Palestino</strong></span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">1 - Cracovia</span></div>
       <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>2 - Bulgaria</strong></span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">1 - Malmo</span></div>
-      <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">1 - St Gallen</span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>2 - Belaneses</strong></span></div>
+      <div class="match"><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">1 - St Gallen</span><span>vs</span><span><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px"><strong>2 - Beleneses</strong></span></div>
     </div>
 
     <div class="round">
@@ -295,7 +295,7 @@
 </div>
 
   <div style="text-align: center; margin-top: 30px;">
-    <img source="IMG_5721.jpeg" style= "max-width: 90%; border-radius:12px; box-shadow: 0 0 15px rgba (0,0,0,0.4);">
+    <img src="IMG_5721.jpeg" style= "max-width: 90%; border-radius:12px; box-shadow: 0 0 15px rgba (0,0,0,0.4);">
     </div>
   
 <script>
