--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
   <table>
     <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Living</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>0</td><td>1</td><td>0</td><td>1</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>0</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>0</td><td>1</td><td>0</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>0</td><td>0(1)</td><td>0(0)</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>0</td><td>0(0)</td><td>0(1)</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>1</td><td>1</td><td>2</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
   </tbody>
   </table>
 
@@ -207,12 +207,12 @@
   <table>
     <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Living</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>0</td><td>4</td><td>0</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>1</td><td>1</td><td>3</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Livinge</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>0</td><td>2</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>0</td><td>1</td><td>0</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>1</td><td>0</td><td>3</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>0</td><td>0</td><td>2</td><td>1</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
   </tbody>
   </table>
 
@@ -220,12 +220,12 @@
   <table>
     <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Livinge</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>0</td><td>1</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>2</td><td>3</td><td>0</td><td>1</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>Livinge</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>0</td><td>1</td><td>1</td><td>1</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>1</td><td>1</td><td>0</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>0</td><td>0(1)</td><td>0(0)</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>0</td><td>2</td><td>0</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Living</td></tr>
   </tbody>
   </table>
 
@@ -233,12 +233,12 @@
   <table>
     <thead><tr><th>Local</th><th>Rojas L</th><th>Goles L</th><th>Goles V</th><th>Rojas V</th><th>Visitante</th><th>Sede</th></tr></thead>
   <tbody>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>Livinge</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Living</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Balcon</td></tr>
-    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>3</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Palestino</td><td>0</td><td>2</td><td>0</td><td>3</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Cracovia</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Bulgaria</td><td>2</td><td>4</td><td>2</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tours FC</td><td>Livinge</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">CD Lugo</td><td>1</td><td>0</td><td>1</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Northampton</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">St Gallen</td><td>2</td><td>0</td><td>2</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Beleneses</td><td>Living</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Everton Viña</td><td>0</td><td>0(0)</td><td>0(1)</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">VVV-Venlo</td><td>Balcon</td></tr>
+    <tr><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Tijuana</td><td>0</td><td>2</td><td>4</td><td>0</td><td><img src="IMG_5714.jpeg" style="height:  20px;vertical-align:middle; margin-right:8px">Malmo</td><td>Living</td></tr>
   </tbody>
   </table>
 </div>
